--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -1388,16 +1388,15 @@
 </td>
 <td>
 
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=Fasteners_workbench_icon.svg&amp;filetimestamp=20240511172114&amp;.html" class="mw-file-description"><img src="../File/Fasteners_workbench_icon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><a href="../Fasteners_Workbench.html" title="Fasteners Workbench">Fasteners</a>
 </td>
-<td>Parts
+<td>Sou&#269;&aacute;sti
 </td>
-<td>It is a workbench that provides various fasteners, screws, bolts, nuts, etc., to attach to your model complying with ISO standards.
+<td>Jedn&aacute; se o pracovn&iacute; plochu, kter&aacute; poskytuje r&#367;zn&eacute; spojovac&iacute; prvky, &scaron;rouby, matice atd. pro p&#345;ipevn&#283;n&iacute; k va&scaron;emu modelu v souladu s normami ISO.
 </td>
 <td>Ulrich Bramar (@ulrich1a) and Shai Seger (@shais)
 </td>
@@ -1406,7 +1405,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2258,13 +2256,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120020808
+Cached time: 20260120020946
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.410 seconds
-Real time usage: 0.601 seconds
-Preprocessor visited node count: 594/1000000
+CPU time usage: 0.402 seconds
+Real time usage: 0.686 seconds
+Preprocessor visited node count: 593/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2274,17 +2272,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.016      1 -total
- 43.22%    7.787      1 Template:Userdocnavi/cs
- 17.85%    3.216      2 Template:Docnav
- 17.71%    3.191      1 Template:Navigation_menu_2
- 11.28%    2.032      1 Template:Version
-  7.93%    1.429      1 Template:TOCright
-  7.75%    1.396      1 Template:KEY
-  7.65%    1.378      2 Template:FileName
+100.00%   16.703      1 -total
+ 40.30%    6.731      1 Template:Userdocnavi/cs
+ 19.74%    3.297      2 Template:Docnav
+ 17.40%    2.907      1 Template:Navigation_menu_2
+ 11.29%    1.886      2 Template:FileName
+ 10.02%    1.674      1 Template:TOCright
+  7.26%    1.212      1 Template:KEY
+  6.73%    1.124      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120020808 and revision id 1741463. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120020945 and revision id 1741465. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
