--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -1405,16 +1405,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=Gear_workbench_icon.svg&amp;filetimestamp=20240901100525&amp;.html" class="mw-file-description"><img src="../File/Gear_workbench_icon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><a href="../Gear_Workbench.html" title="Gear Workbench">Gear</a>
 </td>
-<td>Parts
+<td>Sou&#269;&aacute;sti
 </td>
-<td>It is an extension that adds many different gears like cylindric involute, involute rack, cylindric cycloid, spherical involute bevel-gear, and crown gear.
+<td>Jedn&aacute; se o roz&scaron;&iacute;&#345;en&iacute;, kter&eacute; p&#345;id&aacute;v&aacute; mnoho r&#367;zn&yacute;ch ozuben&yacute;ch kol, jako jsou v&aacute;lcov&aacute; evolventn&iacute;, evolventn&iacute; ozuben&aacute; ty&#269;, v&aacute;lcov&aacute; cykloidn&iacute;, sf&eacute;rick&aacute; evolventn&iacute; ku&#382;elov&aacute; a korunov&aacute; ozuben&aacute; kola.
 </td>
 <td>looooo
 </td>
@@ -1423,7 +1422,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2256,13 +2254,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120020946
+Cached time: 20260120021036
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.402 seconds
-Real time usage: 0.686 seconds
-Preprocessor visited node count: 593/1000000
+CPU time usage: 0.438 seconds
+Real time usage: 0.712 seconds
+Preprocessor visited node count: 592/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2272,17 +2270,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.703      1 -total
- 40.30%    6.731      1 Template:Userdocnavi/cs
- 19.74%    3.297      2 Template:Docnav
- 17.40%    2.907      1 Template:Navigation_menu_2
- 11.29%    1.886      2 Template:FileName
- 10.02%    1.674      1 Template:TOCright
-  7.26%    1.212      1 Template:KEY
-  6.73%    1.124      1 Template:Version
+100.00%   16.935      1 -total
+ 41.29%    6.993      1 Template:Userdocnavi/cs
+ 15.48%    2.622      1 Template:Navigation_menu_2
+ 14.32%    2.426      2 Template:Docnav
+ 11.27%    1.909      1 Template:Version
+ 10.52%    1.781      2 Template:FileName
+ 10.17%    1.723      1 Template:KEY
+  8.03%    1.360      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120020945 and revision id 1741465. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120021035 and revision id 1741467. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
