--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -1570,16 +1570,15 @@
 </td>
 <td>
 
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=ThreadProfileSVGLogo.svg&amp;filetimestamp=20190728015153&amp;.html" class="mw-file-description"><img src="../File/ThreadProfileSVGLogo.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><a href="../ThreadProfile_Workbench.html" title="ThreadProfile Workbench">ThreadProfile</a>
 </td>
-<td>Parts
+<td>Sou&#269;&aacute;sti
 </td>
-<td>It provides tools to create parametric 2D thread profiles compatible with extrusion tools in <a href="../Part_Workbench.html" title="Part Workbench">Part</a> and <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a> workbenches.
+<td>Poskytuje n&aacute;stroje pro vytv&aacute;&#345;en&iacute; parametrick&yacute;ch 2D profil&#367; z&aacute;vit&#367; kompatibiln&iacute;ch s n&aacute;stroji pro vyta&#382;en&iacute; v pracovn&iacute;ch prostorech <a href="../Part_Workbench.html" title="Part Workbench">Part</a> a <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a>.
 </td>
 <td>mwganson
 </td>
@@ -1588,7 +1587,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2250,13 +2248,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120021548
+Cached time: 20260120021901
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.371 seconds
-Real time usage: 0.573 seconds
-Preprocessor visited node count: 590/1000000
+CPU time usage: 0.381 seconds
+Real time usage: 0.662 seconds
+Preprocessor visited node count: 589/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2266,17 +2264,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.792      1 -total
- 35.81%    7.087      1 Template:Userdocnavi/cs
- 18.54%    3.670      1 Template:TOCright
- 14.57%    2.883      2 Template:Docnav
- 14.23%    2.817      1 Template:Navigation_menu_2
- 11.77%    2.330      1 Template:Version
-  7.54%    1.492      1 Template:KEY
-  6.54%    1.295      2 Template:FileName
+100.00%   18.729      1 -total
+ 41.04%    7.686      1 Template:Userdocnavi/cs
+ 17.77%    3.328      2 Template:Docnav
+ 16.20%    3.034      1 Template:Navigation_menu_2
+ 11.48%    2.150      1 Template:TOCright
+  9.90%    1.855      1 Template:Version
+  9.62%    1.801      1 Template:KEY
+  6.78%    1.269      2 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120021547 and revision id 1741471. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120021900 and revision id 1741473. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
