--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -1834,16 +1834,15 @@
 </td>
 <td>
 
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=3D_Printing_Tools_workbench_icon.svg&amp;filetimestamp=20200209022609&amp;.html" class="mw-file-description"><img src="../File/3D_Printing_Tools_workbench_icon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><a rel="nofollow" class="external text" href="https://github.com/mark1791/3D_Printing_Tools">3D Printing Tools</a>
 </td>
-<td>Shapes
+<td>Tvary
 </td>
-<td>It has tools to do small changes to meshes imported from external files like STL.
+<td>Obsahuje n&aacute;stroje pro prov&aacute;d&#283;n&iacute; drobn&yacute;ch zm&#283;n v s&iacute;t&iacute;ch importovan&yacute;ch z extern&iacute;ch soubor&#367;, jako jsou STL.
 </td>
 <td>mark1791
 </td>
@@ -1852,7 +1851,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2248,13 +2246,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120021901
+Cached time: 20260120022740
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.381 seconds
-Real time usage: 0.662 seconds
-Preprocessor visited node count: 589/1000000
+CPU time usage: 0.375 seconds
+Real time usage: 0.550 seconds
+Preprocessor visited node count: 588/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2264,17 +2262,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.729      1 -total
- 41.04%    7.686      1 Template:Userdocnavi/cs
- 17.77%    3.328      2 Template:Docnav
- 16.20%    3.034      1 Template:Navigation_menu_2
- 11.48%    2.150      1 Template:TOCright
-  9.90%    1.855      1 Template:Version
-  9.62%    1.801      1 Template:KEY
-  6.78%    1.269      2 Template:FileName
+100.00%   15.027      1 -total
+ 38.12%    5.728      1 Template:Userdocnavi/cs
+ 22.61%    3.398      2 Template:Docnav
+ 13.72%    2.062      1 Template:Navigation_menu_2
+  9.63%    1.447      1 Template:TOCright
+  9.08%    1.364      2 Template:FileName
+  8.42%    1.265      1 Template:KEY
+  6.77%    1.018      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120021900 and revision id 1741473. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120022739 and revision id 1741475. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
