--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -2215,9 +2215,9 @@
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr></tbody></table>
 
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Translating_external_workbenches">Translating external workbenches</span></h2>
-</div>
+<p><span id="Translating_external_workbenches"></span>
+</p>
+<h2><span id="P.C5.99eklad_extern.C3.ADch_pracovn.C3.ADch_ploch"></span><span class="mw-headline" id="P&#345;eklad_extern&iacute;ch_pracovn&iacute;ch_ploch">P&#345;eklad extern&iacute;ch pracovn&iacute;ch ploch</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>See the wiki page for more information <a href="../Translating_an_external_workbench.html" title="Translating an external workbench">Translating an external workbench</a>
 </p>
@@ -2246,12 +2246,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120022740
+Cached time: 20260120023151
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.375 seconds
-Real time usage: 0.550 seconds
+CPU time usage: 0.385 seconds
+Real time usage: 0.603 seconds
 Preprocessor visited node count: 588/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
@@ -2262,17 +2262,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.027      1 -total
- 38.12%    5.728      1 Template:Userdocnavi/cs
- 22.61%    3.398      2 Template:Docnav
- 13.72%    2.062      1 Template:Navigation_menu_2
-  9.63%    1.447      1 Template:TOCright
-  9.08%    1.364      2 Template:FileName
-  8.42%    1.265      1 Template:KEY
-  6.77%    1.018      1 Template:Version
+100.00%   24.127      1 -total
+ 46.86%   11.306      1 Template:Userdocnavi/cs
+ 28.31%    6.830      1 Template:Navigation_menu_2
+ 16.09%    3.881      2 Template:Docnav
+  9.83%    2.372      1 Template:Version
+  8.50%    2.050      2 Template:FileName
+  7.24%    1.747      1 Template:KEY
+  7.18%    1.733      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120022739 and revision id 1741475. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120023150 and revision id 1741477. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
