--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -2218,11 +2218,8 @@
 <p><span id="Translating_external_workbenches"></span>
 </p>
 <h2><span id="P.C5.99eklad_extern.C3.ADch_pracovn.C3.ADch_ploch"></span><span class="mw-headline" id="P&#345;eklad_extern&iacute;ch_pracovn&iacute;ch_ploch">P&#345;eklad extern&iacute;ch pracovn&iacute;ch ploch</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>See the wiki page for more information <a href="../Translating_an_external_workbench.html" title="Translating an external workbench">Translating an external workbench</a>
-</p>
-</div>
-<p><br>
+<p>Dal&scaron;&iacute; informace najdete na str&aacute;nce wiki <a href="../Translating_an_external_workbench.html" title="Translating an external workbench">P&#345;eklad extern&iacute; pracovn&iacute; plochy</a>
+</p><p><br>
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">Pracovn&iacute; plocha TechDraw</a></div>
@@ -2246,13 +2243,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120023151
+Cached time: 20260120023252
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.385 seconds
-Real time usage: 0.603 seconds
-Preprocessor visited node count: 588/1000000
+CPU time usage: 0.380 seconds
+Real time usage: 0.544 seconds
+Preprocessor visited node count: 587/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2262,17 +2259,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.127      1 -total
- 46.86%   11.306      1 Template:Userdocnavi/cs
- 28.31%    6.830      1 Template:Navigation_menu_2
- 16.09%    3.881      2 Template:Docnav
-  9.83%    2.372      1 Template:Version
-  8.50%    2.050      2 Template:FileName
-  7.24%    1.747      1 Template:KEY
-  7.18%    1.733      1 Template:TOCright
+100.00%   19.300      1 -total
+ 48.66%    9.391      1 Template:Userdocnavi/cs
+ 26.20%    5.057      1 Template:Navigation_menu_2
+ 10.91%    2.106      1 Template:KEY
+ 10.58%    2.041      2 Template:Docnav
+  9.82%    1.895      2 Template:FileName
+  8.08%    1.559      1 Template:TOCright
+  7.65%    1.477      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120023150 and revision id 1741477. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120023251 and revision id 1741479. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
