--- a/wiki/it/Macro_Overlap.html
+++ b/wiki/it/Macro_Overlap.html
@@ -80,10 +80,9 @@ Sovrapposizione Booleana
 <h2><span class="mw-headline" id="Installazione">Installazione</span></h2>
 <p>Scaricare il file MacroOverlap.py e salvarlo nella cartella delle macro:
 </p><p><a rel="nofollow" class="external free" href="https://github.com/DeepSOIC/FreeCAD-Macros/raw/master/Overlap/MacroOverlap.py">https://github.com/DeepSOIC/FreeCAD-Macros/raw/master/Overlap/MacroOverlap.py</a>
+</p><p><span id="How_to_use"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="How_to_use">How to use</span></h2>
-</div>
+<h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Uso">Uso</span></h2>
 <ol><li>Selezionare tre forme* o pi&ugrave; per calcolare sovrapposizione tra loro. &Egrave; anche possibile selezionare un singolo composto contenente le forme.</li>
@@ -263,12 +262,12 @@ def run():
         mb.exec_()</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260120104826
+Cached time: 20260120104843
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.035 seconds
-Real time usage: 0.053 seconds
+CPU time usage: 0.027 seconds
+Real time usage: 0.043 seconds
 Preprocessor visited node count: 101/1000000
 Post&#8208;expand include size: 1989/2097152 bytes
 Template argument size: 6787/2097152 bytes
@@ -279,12 +278,12 @@ Unstrip post&#8208;expand size: 7488/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.485      1 -total
- 58.98%    3.235      1 Template:Macro/it
- 38.70%    2.123      1 Template:MacroCode
+100.00%    5.163      1 -total
+ 54.85%    2.832      1 Template:Macro/it
+ 41.97%    2.167      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74800-0!canonical and timestamp 20260120104826 and revision id 1741519. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74800-0!canonical and timestamp 20260120104843 and revision id 1741521. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
