--- a/wiki/it/Macro_Overlap.html
+++ b/wiki/it/Macro_Overlap.html
@@ -83,12 +83,9 @@ Sovrapposizione Booleana
 </p><p><span id="How_to_use"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Uso">Uso</span></h2>
-<ol><li>Selezionare tre forme* o pi&ugrave; per calcolare sovrapposizione tra loro. &Egrave; anche possibile selezionare un singolo composto contenente le forme.</li>
-<li>In FreeCAD menu: Macro &rarr; Macros... &rarr; doppio-click su MacroOverlap.py. Viene creato un nuovo oggetto.</li>
-<li>Selezionare il nuovo oggetto, e se necessario modificare la propriet&agrave; 'Overlap Index' nella scheda Dati</li></ol>
-</div>
+<ol><li>Selezionare tre* o pi&ugrave; forme per calcolare la sovrapposizione. Si pu&ograve; anche selezionare un singolo composto contenente le forme argomento.</li>
+<li>Nel menu di FreeCAD: Macro &rarr; Macro... &rarr; fare doppio clic su MacroOverlap.py. Verr&agrave; creato un nuovo oggetto.</li>
+<li>Selezionare il nuovo oggetto e modificare la propriet&agrave; "Overlap Index" nell'editor delle propriet&agrave; (scheda Dati), se necessario.</li></ol>
 <p>* si pu&ograve; fare anche due forme, ma l'azione dello strumento &egrave; equivalente a <a href="../it/Part_Common.html" title="Part Common/it">Part Intersezione</a> or <a href="../it/Part_Fuse.html" title="Part Fuse/it">Part Unione</a>, e quindi si consiglia di utilizzare gli strumenti di Part.
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
@@ -262,13 +259,13 @@ def run():
         mb.exec_()</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260120104843
+Cached time: 20260120105010
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.027 seconds
-Real time usage: 0.043 seconds
-Preprocessor visited node count: 101/1000000
+CPU time usage: 0.031 seconds
+Real time usage: 0.047 seconds
+Preprocessor visited node count: 97/1000000
 Post&#8208;expand include size: 1989/2097152 bytes
 Template argument size: 6787/2097152 bytes
 Highest expansion depth: 5/100
@@ -278,12 +275,12 @@ Unstrip post&#8208;expand size: 7488/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.163      1 -total
- 54.85%    2.832      1 Template:Macro/it
- 41.97%    2.167      1 Template:MacroCode
+100.00%    5.251      1 -total
+ 52.45%    2.754      1 Template:Macro/it
+ 43.33%    2.275      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74800-0!canonical and timestamp 20260120104843 and revision id 1741521. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74800-0!canonical and timestamp 20260120105010 and revision id 1741523. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
