--- a/wiki/it/Macro_Overlap.html
+++ b/wiki/it/Macro_Overlap.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Overlap.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro &Uuml;berlappung (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Overlap.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Overlap (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Overlap.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Chevauchement (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Overlap.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Nak&#322;adka (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -89,11 +89,8 @@ Sovrapposizione Booleana
 <p>* si pu&ograve; fare anche due forme, ma l'azione dello strumento &egrave; equivalente a <a href="../it/Part_Common.html" title="Part Common/it">Part Intersezione</a> or <a href="../it/Part_Fuse.html" title="Part Fuse/it">Part Unione</a>, e quindi si consiglia di utilizzare gli strumenti di Part.
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span typeof="mw:File"><a href="../index.php?title=Macro_Overlap.png&amp;filetimestamp=20161012181721&amp;.html" class="mw-file-description"><img src="../File/Macro_Overlap.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="128" data-file-height="128"></a></span>
-</p>
-</div>
-<p><b>MacroOverlap.py</b>
+<p>Icona barra degli strumenti <span typeof="mw:File"><a href="../index.php?title=Macro_Overlap.png&amp;filetimestamp=20161012181721&amp;.html" class="mw-file-description"><img src="../File/Macro_Overlap.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="128" data-file-height="128"></a></span>
+</p><p><b>MacroOverlap.py</b>
 </p>
 <pre>#***************************************************************************
 #*                                                                         *
@@ -259,28 +256,28 @@ def run():
         mb.exec_()</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260120105010
+Cached time: 20260120105020
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.031 seconds
-Real time usage: 0.047 seconds
-Preprocessor visited node count: 97/1000000
+CPU time usage: 0.027 seconds
+Real time usage: 0.052 seconds
+Preprocessor visited node count: 96/1000000
 Post&#8208;expand include size: 1989/2097152 bytes
 Template argument size: 6787/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 7488/5000000 bytes
+Unstrip post&#8208;expand size: 7492/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.251      1 -total
- 52.45%    2.754      1 Template:Macro/it
- 43.33%    2.275      1 Template:MacroCode
+100.00%    6.450      1 -total
+ 52.93%    3.414      1 Template:Macro/it
+ 42.48%    2.740      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74800-0!canonical and timestamp 20260120105010 and revision id 1741523. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74800-0!canonical and timestamp 20260120105020 and revision id 1741525. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
