--- a/wiki/it/Macro_Image_Scaling.html
+++ b/wiki/it/Macro_Image_Scaling.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Image Scaling/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Image+Scaling&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_Image_Scaling.html" class="mw-pt-progress mw-pt-progress--med" title="Makro BildSkalierung (58% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_Image_Scaling.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro BildSkalierung (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Image_Scaling.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Image Scaling (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_Image_Scaling.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Image Scaling (58% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_Image_Scaling.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Image Scaling (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/Macro_Image_Scaling.html" class="mw-pt-progress mw-pt-progress--med" title="Makrodefinicja: Skalowanie obraz&oacute;w (58% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<li><a href="../pl/Macro_Image_Scaling.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Skalowanie obraz&oacute;w (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -72,11 +72,11 @@ Scala immagine
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Macro per scalare disegni, grafici, schemi, modelli e immagini 2D simili nell'ambiente Immagine. Funziona per figure importate come immagini planari nello spazio 3D.
 </p>
 </div>
@@ -240,28 +240,28 @@ ui.setupUi(d)</pre>
 <li><a rel="nofollow" class="external text" href="https://youtu.be/2iFE40uHrA8">Movie created by microelly2</a></li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20251124160031
+Cached time: 20260120105208
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.063 seconds
-Real time usage: 0.076 seconds
+CPU time usage: 0.027 seconds
+Real time usage: 0.046 seconds
 Preprocessor visited node count: 104/1000000
 Post&#8208;expand include size: 1902/2097152 bytes
 Template argument size: 5930/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 6758/5000000 bytes
+Unstrip post&#8208;expand size: 6776/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.859      1 -total
- 68.49%    5.383      1 Template:Macro/it
- 28.77%    2.261      1 Template:MacroCode
+100.00%    5.642      1 -total
+ 58.56%    3.304      1 Template:Macro/it
+ 39.38%    2.222      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:63612-0!canonical and timestamp 20251124160031 and revision id 1702341. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:63612-0!canonical and timestamp 20260120105207 and revision id 1741527. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
