--- a/wiki/it/Macro_Image_Scaling.html
+++ b/wiki/it/Macro_Image_Scaling.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Image_Scaling.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro BildSkalierung (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Image_Scaling.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Image Scaling (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Image_Scaling.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Image Scaling (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Image_Scaling.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Skalowanie obraz&oacute;w (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -75,21 +75,16 @@ Scala immagine
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Macro per scalare disegni, grafici, schemi, modelli e immagini 2D simili nell'ambiente Immagine. Funziona per figure importate come immagini planari nello spazio 3D.
-</p>
-</div>
-<p>Notare: Per le foto di oggetti o immagini coinvolgenti oggetti giacenti a distanze diverse dal punto di vista,, si deve tenere presente l'effetto di <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Parallax">Parallasse</a> (distorsione dovuta a "differenza nella posizione apparente di un oggetto osservato lungo due diverse linee di vista"). Nello schema seguente i 2 oggetti blu sono complanari con il piano perpendicolare al punto di vista dell'utente e possono essere scalati:
+</p><p>Notare: Per le foto di oggetti o immagini coinvolgenti oggetti giacenti a distanze diverse dal punto di vista,, si deve tenere presente l'effetto di <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Parallax">Parallasse</a> (distorsione dovuta a "differenza nella posizione apparente di un oggetto osservato lungo due diverse linee di vista"). Nello schema seguente i 2 oggetti blu sono complanari con il piano perpendicolare al punto di vista dell'utente e possono essere scalati:
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Perspective.png&amp;filetimestamp=20160118222402&amp;.html" class="mw-file-description"><img src="../File/Perspective.png" decoding="async" width="355" height="265" class="mw-file-element" data-file-width="355" data-file-height="265"></a></span>
 </p><p>Nella seconda figura, gli oggetti rossi e verdi non sono complanari con i 2 oggetti blu e quindi non possono essere scalati. Inoltre, con un solo punto di vista dell'utente non si pu&ograve; stabilire con certezza che l'oggetto rosso &egrave; complanare con 1 oggetto blu:
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Parallax.jpg&amp;filetimestamp=20160119154927&amp;.html" class="mw-file-description"><img src="../File/Parallax.jpg" decoding="async" width="361" height="272" class="mw-file-element" data-file-width="361" data-file-height="272"></a></span>   
+</p><p><span id="Usage"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Utilizzo_2">Utilizzo</span></h2>
 <ul><li>avviare la Macro - appare un dialogo</li>
 <li>cliccare nell'immagine sui due punti di cui si conosce la vera distanza</li>
 <li>Selezionare il piano dell'immagine nella vista ad albero</li>
@@ -240,28 +235,28 @@ ui.setupUi(d)</pre>
 <li><a rel="nofollow" class="external text" href="https://youtu.be/2iFE40uHrA8">Movie created by microelly2</a></li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260120105208
+Cached time: 20260120105217
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.027 seconds
-Real time usage: 0.046 seconds
-Preprocessor visited node count: 104/1000000
+CPU time usage: 0.039 seconds
+Real time usage: 0.055 seconds
+Preprocessor visited node count: 100/1000000
 Post&#8208;expand include size: 1902/2097152 bytes
 Template argument size: 5930/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 6776/5000000 bytes
+Unstrip post&#8208;expand size: 6777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.642      1 -total
- 58.56%    3.304      1 Template:Macro/it
- 39.38%    2.222      1 Template:MacroCode
+100.00%    6.486      1 -total
+ 54.10%    3.509      1 Template:Macro/it
+ 43.99%    2.853      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:63612-0!canonical and timestamp 20260120105207 and revision id 1741527. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:63612-0!canonical and timestamp 20260120105217 and revision id 1741531. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
